Change author link to YouTube video

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Professional placeholder logos for your designs projects</h1>
         <p>Acme logos are for the times you need a professional logo to work with but don't have the real thing yet.</p>
         <a href="http://macke.nz/16293B40300F" class="download button button_green" target="_blank">Download for free</a>
-        <p class="made-by">A project by <a href="https://twitter.com/mackenziechild" target="_blank">Mackenzie Child</a></p>
+        <p class="made-by">A project by <a href="https://youtu.be/QxeXfUmBvPU" target="_blank">Mackenzie Child</a></p>
       </section>
 
       <section id="logos">
